@@ -1,4 +1,4 @@
-.\" RCSid "$Id: pvalue.1,v 1.8 2010/12/16 21:34:41 greg Exp $"
+.\" RCSid "$Id: pvalue.1,v 1.9 2019/07/15 22:39:50 greg Exp $"
 .TH PVALUE 1 1/15/99 RADIANCE
 .SH NAME
 pvalue - convert RADIANCE picture to/from alternate formats
@@ -42,6 +42,10 @@ these files.
 .TP 10n
 .BR \-u
 Print only unique values in the output, skipping runs of equal pixels.
+For reverse conversions, the
+.I \-u
+option writes uncompressed output rather than the standard run-length RGBE
+encoding.
 Specifying
 .I \+u
 turns this option off, which is the default.
